adicionando tolist